test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/autogen-enabled/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: autogen-enabled
spec:
  concurrent: false
  steps:
  - name: create policy
    try:
    - create:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: check validatingadmissionpolicies generated for pods and pod controllers
    try:
    - assert:
        file: validatingadmissionpolicy.yaml
  - name: check validatingadmissionpolicybindings generated for pods and pod controllers
    try:
    - assert:
        file: validatingadmissionpolicybinding.yaml
